--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     background-image: url("background1.jpg");
     background-repeat: repeat-y;
     background-size: cover;
+    vertical-align:baseline;
 
 }
 h1{
@@ -23,7 +24,7 @@ h3{
 }
 header{
     background-color:#2aa9db;
-    padding:auto;
+
 
 }
 
@@ -34,31 +35,34 @@ header a{
     text-decoration: none;
     font-weight: bolder;
 }
-
+.mainM{
+    position: relative;
+    min-height: 100vh;
+}
 /* body text config. */
 .content{
-    padding:0 200px 10px;
+    padding:0 200px;
     width: auto;
     Margin:0 auto;
     text-align: justify;
-    position: relative;
-    min-height: 100vh;
+    height: auto;
+
+
 
 }
 
 .footer{
     background-color: #1b7a9f;
+    margin-top: 30px;
     color:#f2f2f2;
     bottom: 0;
-    left: 0;
     text-align:center;
-    position: sticky;
     width: 100%;
 
 }
 
 .nav{
-    margin:0 400px;
+    margin:0  auto;
     display:flex;
     text-align:center;
     width: 100%;
